# tinyndarray

./: .clang-format  .gitignore  README.md  tinyndarray.h
tests/: CMakeLists.txt  test_common.h  test_dot_major.cpp  test_main.cpp  test_profiling.cpp  test_separated_1.cpp  test_separated_2.cpp  test_time_consumption.cpp  test_total.cpp  timer.h
